--- a/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
@@ -38,18 +38,20 @@
             <div class="form-section">
                 {{ form.no_company_number }}
             </div>
-            
+            <p class="heading-medium step">Step 2 of 3</p>
+            <h2 class="heading-large">About you</h2>
             <div class="form-section">
                 {{ form.company_name }} {{ form.search }} 
                 <div class="form-group" id="ch_search-results">
                     <ul class="companies-house-list"></ul>
                 </div>
             </div>
-
             <div class="form-section">
-                {{ form.no_company_number }}
+                {{ form.companynumber }}
             </div>
-
+            <div class="form-section">
+                {{ form.nocompanynumber }}
+            </div>
             
         </form>
         
