EEN-207,  EEN-208 more styling and build on forms

--- a/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
@@ -46,13 +46,49 @@
                     <ul class="companies-house-list"></ul>
                 </div>
             </div>
+
             <div class="form-section">
                 {{ form.companynumber }}
             </div>
+
             <div class="form-section">
                 {{ form.nocompanynumber }}
             </div>
+
+            <div class="form-section">
+                {{ form.website }}
+            </div>
+
+            <div class="form-section">
+                {{ form.companytel }}
+            </div>
+
+            <div class="form-section">
+                {{ form.actions }}
+            </div>
+
+            <p class="heading-medium step">Step 3 of 3</p>
+            <h2 class="heading-large">Your address</h2>
+
+            <div class="form-section">
+                {{ form.addressone }}
+            </div>
+
+            <div class="form-section">
+                {{ form.addresstwo }}
+            </div>
             
+            <div class="form-section">
+                {{ form.city }}
+            </div>
+
+            <div class="form-section">
+                {{ form.county }}
+            </div>
+
+            <div class="form-section">
+                {{ form.actions }}
+            </div>
         </form>
         
     </div>
