EE-208 Added postcode as input field

--- a/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-search-temp.html.twig
@@ -69,6 +69,10 @@
 
             <p class="heading-medium step">Step 3 of 3</p>
             <h2 class="heading-large">Your address</h2>
+            
+            <div class="form-section">
+                {{ form.postcode }}
+            </div>
 
             <div class="form-section">
                 {{ form.addressone }}
