--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up-step2.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up-step2.html.twig
@@ -15,26 +15,29 @@
             {{ form.form_build_id }}
             {{ form.form_id }}
 
-            <p class="heading-medium step">Step 1 of 3</p>
-            <h2 class="heading-large">About you</h2>
+            <p class="heading-medium step">Step 2 of 3</p>
+            <h2 class="heading-large">Your company</h2>
             <div class="form-section">
-                {{ form.firstname }}
+                {{ form.company_name }} {{ form.search }}
+                <div class="form-group" id="ch_search-results">
+                    <ul class="companies-house-list"></ul>
+                </div>
             </div>
 
             <div class="form-section">
-                {{ form.lastname }}
+                {{ form.company_number }}
             </div>
 
             <div class="form-section">
-                {{ form.email }}
+                {{ form.no_company_number }}
             </div>
 
             <div class="form-section">
-                {{ form.phone }}
+                {{ form.website }}
             </div>
 
             <div class="form-section">
-                {{ form.newsletter }}
+                {{ form.company_phone }}
             </div>
 
             <div class="form-section">
