--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -159,7 +159,7 @@
                 <div class="transp">
             {% endif %}
 
-                <form method="{{ form['#method'] }}" class="form-opportunities">
+                <form action="{{ form['#action'] }}" method="{{ form['#method'] }}" class="form-opportunities">
 
                     {#Required hidden field for drupal form#}
                     {{ form.form_build_id }}
