--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/step1.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/step1.html.twig
@@ -9,35 +9,32 @@
 
     <div class="column-two-thirds">
 
-        <form method="{{ form['#method'] }}" class="form-companies-house-search">
+        <form action="{{ form['#action'] }}" method="{{ form['#method'] }}" class="form-companies-house-search">
 
             {#Required hidden field for drupal form#}
             {{ form.form_build_id }}
             {{ form.form_id }}
 
-            <p class="heading-medium step">Step 2 of 3</p>
-            <h2 class="heading-large">Your company</h2>
+            <p class="heading-medium step">Step 1 of 3</p>
+            <h2 class="heading-large">About you</h2>
             <div class="form-section">
-                {{ form.company_name }} {{ form.search }}
-                <div class="form-group" id="ch_search-results">
-                    <ul class="companies-house-list"></ul>
-                </div>
+                {{ form.firstname }}
             </div>
 
             <div class="form-section">
-                {{ form.company_number }}
+                {{ form.lastname }}
             </div>
 
             <div class="form-section">
-                {{ form.no_company_number }}
+                {{ form.email }}
             </div>
 
             <div class="form-section">
-                {{ form.website }}
+                {{ form.phone }}
             </div>
 
             <div class="form-section">
-                {{ form.company_phone }}
+                {{ form.newsletter }}
             </div>
 
             <div class="form-section">
