EEN-219: Adding review page of sign up process

--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/step1.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/step1.html.twig
@@ -26,11 +26,11 @@
             </div>
 
             <div class="form-section">
-                {{ form.email }}
+                {{ form.contact_email }}
             </div>
 
             <div class="form-section">
-                {{ form.phone }}
+                {{ form.contact_phone }}
             </div>
 
             <div class="form-section">
