--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
@@ -66,7 +66,7 @@
         <div class="column-two-thirds with-cta">
             <div>
                 <p class="no-margin">
-                    <strong class="label your-name">Your name:</strong><span>{{ form.firstname }}</span>
+                    <strong class="label your-name">Your name:</strong><span>{{ form.firstname }} {{ form.lastname }}</span>
                 </p>
                 <p class="no-margin">
                     <strong class="label your-email">Your email address:</strong><span>{{ form.contact_email }}</span>
@@ -133,7 +133,7 @@
                 <p>By submitting this application you are confirming that the details you are correct and that, as per
                     the privacy policy, my personal information will not be shared.</p>
             </div>
-            <p><a href="#" class="button">Complete your application</a></p>
+            <p><a href="{{ url('opportunities.eoi.complete', {'profileId': form.profile_id}) }}" class="button">Complete your application</a></p>
         </div>
         <div class="column-one-third">
 
