--- a/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
@@ -1,14 +1,3 @@
-{% set params = {} %}
-{% if search %}
-    {% set params = params|merge({'search': search}) %}
-{% endif %}
-{% if opportunity_type %}
-    {% set params = params|merge({'opportunity_type': opportunity_type}) %}
-{% endif %}
-{% if country %}
-    {% set params = params|merge({'country': country}) %}
-{% endif %}
-
 <div class="content-heading">
     <h1>{{ 'Partnering Opportunities'|t }}</h1>
     <h2 class="heading-large">{{ 'Find international partners'|t }}</h2>
@@ -22,9 +11,13 @@
             <br />
             
             <div class="sentence-builder">
-                <p>I'm looking for <span id="keywords" contenteditable="true">Enter a keyword </span>partners to do <span tabindex="0">...trigger...</span> located in <span tabindex="0">...trigger...</span> </p>
+                <p>I'm looking for <span id="keywords" contenteditable="true">Enter a keyword </span>partners  
+                    <span class="dropdown" tabindex="0" id="search_type">To do  <i class="fa fa-caret-down"></i></span> 
+                    located 
+                    <span class="dropdown" tabindex="0" id="search_country">in <i class="fa fa-caret-down"></i></span> 
+                </p>
 
-                <div style="display:block;">
+                <div>
 
                     <div class="modal">
                         {{ form }}
