--- a/drupal/themes/custom/een/scss/een.scss
+++ b/drupal/themes/custom/een/scss/een.scss
@@ -952,10 +952,10 @@ form[data-drupal-selector="opportunity-search-form"] {
                 overflow:hidden;
             }
 
-            @supports (display: flex) {
+            /*@supports (display: flex) {
                 display:flex;
                 align-items:center;
-            }
+            }*/
         }
 
         &.sa-pin {
@@ -999,14 +999,192 @@ form[data-drupal-selector="opportunity-search-form"] {
             position: absolute;
             margin-top: -15px;
         }
+        
+        @media (max-width:640px){
+            display:inline-block;
+        }
+    }
+    
+    span.dropdown {
+        min-width:200px;
+        border-bottom:2px solid grey;
+        display: inline-block;
+        
+        .fa {
+            float:right;
+        }
     }
     
     .modal {
         border:1px solid $dark-blue;
         background:white;
-        padding:31px;
-        max-width:450px;
+        position:absolute;
+        display:none;
+        z-index: 20;
+        margin:-170px 0 0 20%;
+        min-width: 400px;
+        
+       
+       @media (max-width:640px){
+            top:50px;
+            width:100%;
+            z-index: 20;
+            width: 100%;
+            right: 0;
+            margin:0;
+            min-width:320px;
+       }
     }
+    .form-submit {
+        display: none;
+    }
+}
+
+.modal-overlay {
+    background: rgba(0,0,0, 0.6);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    position: absolute;
+    z-index: 1;
+    
+    @media (max-width:640px){
+         position: fixed;
+    }
+}
+
+form[data-drupal-selector="opportunity-search-explore-form"] {
+
+    .block-label {
+        width:100%;
+        padding:7px 31px;
+        border:none;
+        background:white;
+        
+        &:hover {
+            background:lightblue!important;
+        }
+    }
+    
+    .block-label.selected {
+        color:$dark-blue;
+    }
+    .fieldset-legend {
+        padding:7px;
+    }
+    
+    .form-item {
+        padding:7px;
+    }
+
+
+    .form-label {
+        color:#0B0C0C;
+        font-weight: 600;
+    }
+
+    fieldset {
+        width:auto;
+    }
+
+    legend {
+        box-sizing: border-box;
+        max-width: 100%;
+        display: block;
+        float:left;
+        margin: 0.2em 0 0.4em 0;
+        color:#0B0C0C;
+        font-weight: 600;
+    }
+
+    .form-item-search, .fieldgroup  {
+        margin-bottom: 14px;
+        .form-control {
+            width: 100%;
+        }
+        .fieldset-wrapper {
+            legend {
+                margin: 10px;
+                display: block;
+                top: 15px;
+                position: relative;
+            }
+            .block-label {
+                background: white;
+                width: initial;
+                margin: 0;
+                font-size: 16px;
+                float:none;
+            }
+        }
+    }
+
+    .block-label {
+        padding: 14px 14px 7px 14px;
+
+        input[type=checkbox], input[type=radio]  {
+           height: 1px;
+           width: 1px;
+           overflow: hidden;
+           right:27px;
+           left:inherit;
+        }
+    }
+    .block-label input:before {
+        content: '';
+        width: 9px;
+        height: 5px;
+        position: absolute;
+        top: 4px;
+        right: 4px;
+        border: 3px solid #fcfff4;
+        border-top: none;
+        border-right: none;
+        background: transparent;
+        opacity: 0;
+        -webkit-transform: rotate(-45deg);
+        transform: rotate(-45deg);
+    }
+
+    /* main checkbox*/
+
+    .block-label:after {
+        width: 20px;
+        height: 20px;
+        position: absolute;
+        background: #fcfff4;
+        border: 1px solid transparent;
+        content: " ";
+        display: block;
+        float: left;
+        right: 13px;
+        top: 11px;
+        border-radius: 1px;
+    }
+    .block-label,
+    .block-label.selected,
+    .block-label:hover,
+    .block-label:active {
+        border-color:#9B9B9B;
+        border-top-width: 0;
+    }
+    .block-label:first-of-type{
+        border-top-width:1px;
+    }
+    .block-label.selected:after {
+        background: #006BA6 url('../img/tick-checkbox.png') no-repeat center 50%;
+        border-color: #00587C;
+    }
+    .block-label.focused:after {
+         outline: 3px solid #ffbf47;
+    }
+    .block-label.focused {
+        z-index: 1;
+        outline:none;
+    }
+    
+    
 }
 
 
