--- a/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
@@ -24,6 +24,11 @@
                     </div>
                 </div>
             </div>
+                    
+            <p class="sb-results">20 results</p>
+            
+            <button class="button button--primary">View Results</button>
+            
                 
             <p><a href="/opportunities">No thanks, let me see all opportunities</a></p>
         </div>
