--- a/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-details.html.twig
@@ -64,7 +64,7 @@
             <div class="contents-list sticky-sidebar">
                 <h3 class="heading-medium sticky-sidebar-header">{{ 'Contents'|t }}</h3>
                 <ul class="sticky-sidebar-content">
-                    <li><a href="#abstract">{{ 'Abstract'|t }}</a></li>
+                    <li><a href="#summary">{{ 'Summary'|t }}</a></li>
                     <li><a href="#description">{{ 'Description'|t }}</a></li>
                     <li><a href="#partner_expertise_sought">{{ 'Partner expertise sought'|t }}</a></li>
                     <li><a href="#advantages_and_innovations">{{ 'Advantages and innovations'|t }}</a></li>
@@ -87,7 +87,7 @@
             </div>
         </div>
         <div class="column-two-thirds contents-text-block">
-            <h3 class="heading-medium" id="abstract">{{ 'Abstract'|t }}</h3>
+            <h3 class="heading-medium" id="summary">{{ 'Summary'|t }}</h3>
             <p>
                 {% if opportunity._source.summary %}
                     {{ opportunity._source.summary }}
