SB updates to View results

--- a/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
@@ -12,9 +12,9 @@
 
             <div class="sentence-builder">
                 <p>I'm looking for <span id="keywords" contenteditable="true">Enter a keyword </span>partners
-                    <span class="dropdown" tabindex="0" id="search_type">To do  <i class="fa fa-caret-down"></i></span>
+                    <span class="dropdown" tabindex="0" id="search_type">to do  <i class="fa fa-chevron-down" aria-hidden="true"></i></span>
                     located
-                    <span class="dropdown" tabindex="0" id="search_country">in <i class="fa fa-caret-down"></i></span>
+                    <span class="dropdown" tabindex="0" id="search_country">in <i class="fa fa-chevron-down" aria-hidden="true"></i></span>
                 </p>
 
                 <div>
@@ -25,11 +25,7 @@
                 </div>
             </div>
 
-            <p class="sb-results">0 results</p>
-
-            <button class="button button--primary">View Results</button>
-
-
+            <p><a href="/opportunities" class="button button--primary js-sb-view-results">View Results</a>  <span class="sb-results">0 results</span></p>
             <p><a href="/opportunities">No thanks, let me see all opportunities</a></p>
         </div>
 
