EEN-207 Step 1 styling

--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/review.html.twig
@@ -1,6 +1,6 @@
 <div class="grid-row">
     <div class="column-full">
-        <div class="header-secondary">
+        <div class="header-secondary header-secondary">
             <h1 class="heading-large">Check your answers before completing your application</h1>
         </div>
         <h2 class="heading-medium">Opportunity application</h2>
