--- a/drupal/modules/custom/opportunities/templates/opportunities-sign-up/step1.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sign-up/step1.html.twig
@@ -1,9 +1,9 @@
 <div class="grid-row">
     <div class="column-full">
-        <div class="form-heading">
+        <div class="form-heading header-secondary">
             <h1 class="heading-large">Thank you for applying for this project.</h1>
             <p>To complete your project application please create an account with EEN to take advantage
-                of some other great benefits to help grow your business</p>
+                of some other great benefits to help your business grow</p>
         </div>
     </div>
 
