EEN-200 Sentence builder

--- a/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
+++ b/drupal/modules/custom/opportunities/templates/opportunities-sentence-builder.html.twig
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <p><a href="/opportunities" class="button button--primary js-sb-view-results sb-view-results">View Results</a>  <span tabindex="0" class="sb-results"></span></p>
+            <p><a href="/opportunities" class="button button--primary disabled js-sb-view-results sb-view-results">View Results</a>  <span tabindex="0" class="sb-results"></span></p>
             <p><a href="/opportunities">No thanks, let me see all opportunities</a></p>
         </div>
 
